# Codeforces_Tool-master

./: CMakeLists.txt  CodeforcesAPI.cpp  CodeforcesAPI.h  index.html  main.cpp
